@@ -1,5 +1,12 @@
 2008-04-11  Øyvind Kolås  <pippin@o-hand.com>
 
+	* clutter-box2d/clutter-box2d.cpp:
+	* clutter-box2d/clutter-box2d.h:
+	* doc/reference/clutter-box2d-sections.txt: Improved coverage of
+	documentation.
+
+2008-04-11  Øyvind Kolås  <pippin@o-hand.com>
+
 	* box2d/Makefile.am:
 	* clutter-box2d/Makefile.am:
 	* examples/Makefile.am: add more files to distribution making
